refactor: Moved basics to separate packages

--- a/src/Dependencies/graph.html
+++ b/src/Dependencies/graph.html
@@ -99,16 +99,12 @@
       "Name": "Nikcio.UHeadless"
     },
     {
-      "Id": "\\Nikcio.UHeadless.Basics\\Nikcio.UHeadless.Basics.csproj",
-      "Name": "Nikcio.UHeadless.Basics"
+      "Id": "\\Nikcio.UHeadless.Basics.Content\\Nikcio.UHeadless.Basics.Content.csproj",
+      "Name": "Nikcio.UHeadless.Basics.Content"
     },
     {
-      "Id": "\\Nikcio.UHeadless.Content\\Nikcio.UHeadless.Content.csproj",
-      "Name": "Nikcio.UHeadless.Content"
-    },
-    {
-      "Id": "\\Nikcio.UHeadless.Media\\Nikcio.UHeadless.Media.csproj",
-      "Name": "Nikcio.UHeadless.Media"
+      "Id": "\\Nikcio.UHeadless.Basics.Media\\Nikcio.UHeadless.Basics.Media.csproj",
+      "Name": "Nikcio.UHeadless.Basics.Media"
     },
     {
       "Id": "\\Nikcio.UHeadless.Base\\Nikcio.UHeadless.Base.csproj",
@@ -123,28 +119,44 @@
       "Name": "Nikcio.UHeadless.Core"
     },
     {
+      "Id": "\\Nikcio.UHeadless.Base.Tests\\Nikcio.UHeadless.Base.Tests.csproj",
+      "Name": "Nikcio.UHeadless.Base.Tests"
+    },
+    {
+      "Id": "\\Nikcio.UHeadless.Basics.ContentTypes\\Nikcio.UHeadless.Basics.ContentTypes.csproj",
+      "Name": "Nikcio.UHeadless.Basics.ContentTypes"
+    },
+    {
+      "Id": "\\Nikcio.UHeadless.Basics.Properties\\Nikcio.UHeadless.Basics.Properties.csproj",
+      "Name": "Nikcio.UHeadless.Basics.Properties"
+    },
+    {
+      "Id": "\\Nikcio.UHeadless.Content\\Nikcio.UHeadless.Content.csproj",
+      "Name": "Nikcio.UHeadless.Content"
+    },
+    {
       "Id": "\\Nikcio.UHeadless.ContentTypes\\Nikcio.UHeadless.ContentTypes.csproj",
       "Name": "Nikcio.UHeadless.ContentTypes"
     },
     {
-      "Id": "\\Nikcio.UHeadless.DataTypes\\Nikcio.UHeadless.DataTypes.csproj",
-      "Name": "Nikcio.UHeadless.DataTypes"
+      "Id": "\\Nikcio.UHeadless.Basics.Dictionary\\Nikcio.UHeadless.Basics.Dictionary.csproj",
+      "Name": "Nikcio.UHeadless.Basics.Dictionary"
     },
     {
       "Id": "\\Nikcio.UHeadless.Dictionary\\Nikcio.UHeadless.Dictionary.csproj",
       "Name": "Nikcio.UHeadless.Dictionary"
     },
     {
-      "Id": "\\Nikcio.UHeadless.MediaTypes\\Nikcio.UHeadless.MediaTypes.csproj",
-      "Name": "Nikcio.UHeadless.MediaTypes"
+      "Id": "\\Nikcio.UHeadless.Media\\Nikcio.UHeadless.Media.csproj",
+      "Name": "Nikcio.UHeadless.Media"
+    },
+    {
+      "Id": "\\Nikcio.UHeadless.Basics.Members\\Nikcio.UHeadless.Basics.Members.csproj",
+      "Name": "Nikcio.UHeadless.Basics.Members"
     },
     {
       "Id": "\\Nikcio.UHeadless.Members\\Nikcio.UHeadless.Members.csproj",
       "Name": "Nikcio.UHeadless.Members"
-    },
-    {
-      "Id": "\\Nikcio.UHeadless.MemberTypes\\Nikcio.UHeadless.MemberTypes.csproj",
-      "Name": "Nikcio.UHeadless.MemberTypes"
     },
     {
       "Id": "\\Nikcio.UHeadless.Cache\\Nikcio.UHeadless.Cache.csproj",
@@ -161,6 +173,22 @@
     {
       "Id": "\\Nikcio.UHeadless.Cache.TextFiles\\Nikcio.UHeadless.Cache.TextFiles.csproj",
       "Name": "Nikcio.UHeadless.Cache.TextFiles"
+    },
+    {
+      "Id": "\\Nikcio.UHeadless.Core.Tests\\Nikcio.UHeadless.Core.Tests.csproj",
+      "Name": "Nikcio.UHeadless.Core.Tests"
+    },
+    {
+      "Id": "\\Nikcio.UHeadless.DataTypes\\Nikcio.UHeadless.DataTypes.csproj",
+      "Name": "Nikcio.UHeadless.DataTypes"
+    },
+    {
+      "Id": "\\Nikcio.UHeadless.MediaTypes\\Nikcio.UHeadless.MediaTypes.csproj",
+      "Name": "Nikcio.UHeadless.MediaTypes"
+    },
+    {
+      "Id": "\\Nikcio.UHeadless.MemberTypes\\Nikcio.UHeadless.MemberTypes.csproj",
+      "Name": "Nikcio.UHeadless.MemberTypes"
     }
   ],
   "Packages": [],
@@ -171,15 +199,11 @@
     },
     {
       "From": "\\Nikcio.UHeadless\\Nikcio.UHeadless.csproj",
-      "To": "\\Nikcio.UHeadless.Basics\\Nikcio.UHeadless.Basics.csproj"
+      "To": "\\Nikcio.UHeadless.Basics.Content\\Nikcio.UHeadless.Basics.Content.csproj"
     },
     {
       "From": "\\Nikcio.UHeadless\\Nikcio.UHeadless.csproj",
-      "To": "\\Nikcio.UHeadless.Content\\Nikcio.UHeadless.Content.csproj"
-    },
-    {
-      "From": "\\Nikcio.UHeadless\\Nikcio.UHeadless.csproj",
-      "To": "\\Nikcio.UHeadless.Media\\Nikcio.UHeadless.Media.csproj"
+      "To": "\\Nikcio.UHeadless.Basics.Media\\Nikcio.UHeadless.Basics.Media.csproj"
     },
     {
       "From": "\\Nikcio.UHeadless.Base\\Nikcio.UHeadless.Base.csproj",
@@ -190,36 +214,52 @@
       "To": "\\Nikcio.UHeadless.Core\\Nikcio.UHeadless.Core.csproj"
     },
     {
-      "From": "\\Nikcio.UHeadless.Basics\\Nikcio.UHeadless.Basics.csproj",
-      "To": "\\Nikcio.UHeadless.ContentTypes\\Nikcio.UHeadless.ContentTypes.csproj"
+      "From": "\\Nikcio.UHeadless.Base.Tests\\Nikcio.UHeadless.Base.Tests.csproj",
+      "To": "\\Nikcio.UHeadless.Base\\Nikcio.UHeadless.Base.csproj"
     },
     {
-      "From": "\\Nikcio.UHeadless.Basics\\Nikcio.UHeadless.Basics.csproj",
+      "From": "\\Nikcio.UHeadless.Basics.Content\\Nikcio.UHeadless.Basics.Content.csproj",
+      "To": "\\Nikcio.UHeadless.Basics.ContentTypes\\Nikcio.UHeadless.Basics.ContentTypes.csproj"
+    },
+    {
+      "From": "\\Nikcio.UHeadless.Basics.Content\\Nikcio.UHeadless.Basics.Content.csproj",
+      "To": "\\Nikcio.UHeadless.Basics.Properties\\Nikcio.UHeadless.Basics.Properties.csproj"
+    },
+    {
+      "From": "\\Nikcio.UHeadless.Basics.Content\\Nikcio.UHeadless.Basics.Content.csproj",
       "To": "\\Nikcio.UHeadless.Content\\Nikcio.UHeadless.Content.csproj"
     },
     {
-      "From": "\\Nikcio.UHeadless.Basics\\Nikcio.UHeadless.Basics.csproj",
-      "To": "\\Nikcio.UHeadless.DataTypes\\Nikcio.UHeadless.DataTypes.csproj"
+      "From": "\\Nikcio.UHeadless.Basics.ContentTypes\\Nikcio.UHeadless.Basics.ContentTypes.csproj",
+      "To": "\\Nikcio.UHeadless.ContentTypes\\Nikcio.UHeadless.ContentTypes.csproj"
     },
     {
-      "From": "\\Nikcio.UHeadless.Basics\\Nikcio.UHeadless.Basics.csproj",
+      "From": "\\Nikcio.UHeadless.Basics.Dictionary\\Nikcio.UHeadless.Basics.Dictionary.csproj",
       "To": "\\Nikcio.UHeadless.Dictionary\\Nikcio.UHeadless.Dictionary.csproj"
     },
     {
-      "From": "\\Nikcio.UHeadless.Basics\\Nikcio.UHeadless.Basics.csproj",
-      "To": "\\Nikcio.UHeadless.MediaTypes\\Nikcio.UHeadless.MediaTypes.csproj"
+      "From": "\\Nikcio.UHeadless.Basics.Media\\Nikcio.UHeadless.Basics.Media.csproj",
+      "To": "\\Nikcio.UHeadless.Basics.ContentTypes\\Nikcio.UHeadless.Basics.ContentTypes.csproj"
     },
     {
-      "From": "\\Nikcio.UHeadless.Basics\\Nikcio.UHeadless.Basics.csproj",
+      "From": "\\Nikcio.UHeadless.Basics.Media\\Nikcio.UHeadless.Basics.Media.csproj",
+      "To": "\\Nikcio.UHeadless.Basics.Properties\\Nikcio.UHeadless.Basics.Properties.csproj"
+    },
+    {
+      "From": "\\Nikcio.UHeadless.Basics.Media\\Nikcio.UHeadless.Basics.Media.csproj",
       "To": "\\Nikcio.UHeadless.Media\\Nikcio.UHeadless.Media.csproj"
     },
     {
-      "From": "\\Nikcio.UHeadless.Basics\\Nikcio.UHeadless.Basics.csproj",
+      "From": "\\Nikcio.UHeadless.Basics.Members\\Nikcio.UHeadless.Basics.Members.csproj",
+      "To": "\\Nikcio.UHeadless.Basics.Properties\\Nikcio.UHeadless.Basics.Properties.csproj"
+    },
+    {
+      "From": "\\Nikcio.UHeadless.Basics.Members\\Nikcio.UHeadless.Basics.Members.csproj",
       "To": "\\Nikcio.UHeadless.Members\\Nikcio.UHeadless.Members.csproj"
     },
     {
-      "From": "\\Nikcio.UHeadless.Basics\\Nikcio.UHeadless.Basics.csproj",
-      "To": "\\Nikcio.UHeadless.MemberTypes\\Nikcio.UHeadless.MemberTypes.csproj"
+      "From": "\\Nikcio.UHeadless.Basics.Properties\\Nikcio.UHeadless.Basics.Properties.csproj",
+      "To": "\\Nikcio.UHeadless.Base\\Nikcio.UHeadless.Base.csproj"
     },
     {
       "From": "\\Nikcio.UHeadless.Cache\\Nikcio.UHeadless.Cache.csproj",
@@ -244,6 +284,10 @@
     {
       "From": "\\Nikcio.UHeadless.ContentTypes\\Nikcio.UHeadless.ContentTypes.csproj",
       "To": "\\Nikcio.UHeadless.Base\\Nikcio.UHeadless.Base.csproj"
+    },
+    {
+      "From": "\\Nikcio.UHeadless.Core.Tests\\Nikcio.UHeadless.Core.Tests.csproj",
+      "To": "\\Nikcio.UHeadless.Core\\Nikcio.UHeadless.Core.csproj"
     },
     {
       "From": "\\Nikcio.UHeadless.DataTypes\\Nikcio.UHeadless.DataTypes.csproj",
